# mpi_communication_patterns

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  mpi_utils.f90  mpi_utils.mod  summa_1d.f90  summa_1d_overlapping.f90
